use consistent naming convention

--- a/openapi/fleet-manager.yaml
+++ b/openapi/fleet-manager.yaml
@@ -400,7 +400,7 @@ paths:
                   $ref: '#/components/examples/500Example'
       parameters:
         - $ref: '#/components/parameters/name'
-        - $ref: '#/components/parameters/owner-user'
+        - $ref: '#/components/parameters/owner_user'
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/size'
   /api/rhacs/v1/cloud_providers:
@@ -535,7 +535,7 @@ components:
         - type: object
           required:
             - multi_az
-            - owner-organisation
+            - owner_organisation
           properties:
             status:
               description: "Values: [accepted, preparing, provisioning, ready, failed, deprovision, deleting] "
@@ -548,9 +548,9 @@ components:
             region:
               description: "Values will be regions of specific cloud provider. For example: us-east-1 for AWS"
               type: string
-            owner-user:
+            owner_user:
               type: string
-            owner-organisation:
+            owner_organisation:
               type: string
             name:
               type: string
@@ -721,7 +721,7 @@ components:
       type: object
       properties:
         # for now owner user is the only supported field for update
-        owner-user:
+        owner_user:
           type: string
           nullable: true 
 
@@ -769,8 +769,8 @@ components:
       required: false
       schema:
         type: string
-    owner-user:
-      name: owner-user
+    owner_user:
+      name: owner_user
       in: query
       description: User that owns the request
       required: false
@@ -813,8 +813,8 @@ components:
         cloud_provider: "aws"
         multi_az: true
         region: "us-east-1"
-        owner-user: "alice"
-        owner-organisation: "my_org"
+        owner_user: "alice"
+        owner_organisation: "my_org"
         name: "serviceapi"
         host: "serviceapi-1isy6rq3jki8q0otmjqfd3ocfrg.example.rhacs.com"
         created_at: "2020-10-05T12:51:24.053142Z"
@@ -830,8 +830,8 @@ components:
         cloud_provider: "aws"
         multi_az: true
         region: "us-east-1"
-        owner-user: "bob"
-        owner-organisation: "my_org"
+        owner_user: "bob"
+        owner_organisation: "my_org"
         name: "serviceapi"
         host: "serviceapi-1isy6rq3jki8q0otmjqfd3ocfrg.example.rhacs.com"
         created_at: "2020-10-05T12:51:24.053142Z"
